TFP-6302: Henter og lagrer ned uttaksperioder for annenpart i EØS på søkers vedtak + utvider saker mot selvbetjening